--- a/typescript/docker-compose.yml
+++ b/typescript/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./2_stl:/app/2_stl
       - ./3_algorithm:/app/3_algorithm
       - ./4_code-recipe:/app/4_code-recipe
+      - ./package.json:/app/package.json
     command: yarn execute
     # command: yarn test:ci
     # command: yarn test:coverage
