--- a/typescript/docker-compose.yml
+++ b/typescript/docker-compose.yml
@@ -14,6 +14,6 @@ services:
       - ./3_algorithm:/app/3_algorithm
       - ./4_code-recipe:/app/4_code-recipe
       - ./package.json:/app/package.json
-    command: yarn execute
-    # command: yarn test:ci
+    # command: yarn execute
+    command: yarn test:ci
     # command: yarn test:coverage
