--- a/typescript/docker-compose.yml
+++ b/typescript/docker-compose.yml
@@ -9,10 +9,10 @@ services:
     volumes:
       - ./__tests__:/app/__tests__
       - ../testcase:/app/testcase
-      - ./1_basic-grammer:/app/1_basic-grammer
-      - ./2_stl:/app/2_stl
-      - ./3_algorithm:/app/3_algorithm
-      - ./4_code-recipe:/app/4_code-recipe
+      - ./basic_grammar:/app/basic_grammar
+      - ./stl:/app/stl
+      - ./algorithm:/app/algorithm
+      - ./code_recipe:/app/code_recipe
       - ./package.json:/app/package.json
     # command: yarn execute
     command: yarn test:ci
