--- a/typescript/docker-compose.yml
+++ b/typescript/docker-compose.yml
@@ -14,6 +14,6 @@ services:
       - ./algorithm:/app/algorithm
       - ./code_recipe:/app/code_recipe
       - ./package.json:/app/package.json
-    # command: yarn execute
-    command: yarn test:ci
+    command: yarn execute
+    # command: yarn test:ci
     # command: yarn test:coverage
